# nix-dotfiles

./: .ansible-lint  .cargo-crap.toml  .dockerignore  .fallowrc.json  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  .sops.yaml  .ziglint.zon  Cargo.toml  Dockerfile  README.md  ansible.cfg  biome.json  build.zig  compose.yaml  flake.nix  go.mod  go.sum  package.json  scaffold.scm  tsconfig.json
.github/workflows/: bootstrap-release.yaml  flake-check.yaml  go.yaml  rust.yaml  spectrum.yaml  update-github-actions.yaml  zig.yaml
.scaffold/extensions/: entries  installers
ansible/: bootstrap.sh
ansible/inventory/: localhost.yml
ansible/playbooks/: bootstrap.yml  host.yml  site.yml  userland.yml
bootstrap/: bootstrap-pwsh.ps1  bootstrap.ps1  bootstrap.sh  doctor.sh  tools.toml  update-zig-artifacts.ps1  update-zig-artifacts.sh  update.sh  zig-artifacts.tsv
bootstrap/dev_tools/: build.zig  doctor.zig  main.zig  tools.zig
cmd/chezmoi-support/: main.go
cmd/helium-browser/: main.go
cmd/http-fixture/: main.go
cmd/immutable-activate/: main.go
cmd/lenovo-con-mode/: main.go
cmd/lsp-diagnostic-filter/: main.go  main_test.go
cmd/nd-tools/: main.go
cmd/system-run-mcp/: main.go
cmd/system-runner/: exec_unix.go  exec_windows.go  main.go
cmd/zellij-theme-run/: main.go
crates/boot-cli/: Cargo.toml
crates/boot-core/: Cargo.toml
crates/bootstrap-cli/: Cargo.toml
crates/bootstrap-core/: Cargo.toml
crates/chezmoi/: Cargo.toml
crates/chezmoi-support/: Cargo.toml
crates/chezmoi/src/: hyper_window_tiling.rs  main.rs  raycast.rs  shell.rs
crates/common/: Cargo.toml
crates/common/src/: process.rs  template.rs
crates/dotfiles-common/: Cargo.toml
crates/dotfiles-common/src/: fs.rs  http.rs  lib.rs  process.rs  template.rs
dotfiles/: .chezmoiexternal.toml.tmpl  .chezmoiignore  .chezmoiremove  dot_bash_profile.tmpl  dot_bashenv.tmpl  dot_bashrc.tmpl  dot_gitconfig.tmpl  dot_zshenv.tmpl  dot_zshrc.tmpl
dotfiles/.chezmoi-lib/: chezmoi.ts  collections.ts  command.ts  fs.ts  hash.ts  script.ts  temp.ts
dotfiles/.chezmoiscripts/: run_after_desktop_integrations  run_after_hyper_window_tiling  run_after_raycast_beta_patch.sh.tmpl  run_once_zed_install_catppuccin_theme  run_once_zed_install_catppuccin_theme.sh.tmpl  run_once_zed_install_catppuccin_theme.ts  run_onchange_ nushell_init.sh  run_onchange_after_install-vs-extensions  run_onchange_after_install-vs-extensions.tmpl  run_onchange_after_install-vs-extensions.ts  run_onchange_after_nushell_init  run_onchange_after_nushell_init.ts  run_onchange_after_raycast_window_management  run_onchange_after_raycast_window_management.ts  run_onchange_after_tool_updater.sh.tmpl  run_onchange_after_tool_updater_windows.ps1.tmpl  run_onchange_after_yazi_init  run_onchange_after_yazi_init.ts  run_onchange_after_zsh_bash_init  run_onchange_after_zsh_bash_init.ts  run_onchange_install-vs-extensions.sh.tmpl  run_onchange_nushell_init.sh  run_onchange_yazi_init.sh  run_onchange_zsh_bash_init.sh
dotfiles/.chezmoiscripts-zig/: run_once_zed_install_catppuccin_theme.zig  run_onchange_after_install-vs-extensions.zig  run_onchange_after_nushell_init.zig  run_onchange_after_raycast_window_management.zig  run_onchange_after_yazi_init.zig  run_onchange_after_zsh_bash_init.zig  script.zig
dotfiles/.chezmoitemplates/: config.nu  env.nu  ghostty_config.conf.tmpl  ghostty_config.tmpl  nushell_aliases.nu  nushell_config.nu.tmpl  nushell_env.nu.tmpl  raycast_window_management_sql.py  vscode_settings.json
dotfiles/dot_claude/: settings.json  statusline-command.sh
dotfiles/dot_codex/: config.toml.tmpl
dotfiles/dot_config/: starship.toml
dotfiles/dot_ssh/: allowed_signers  config.tmpl  private_github_key.tmpl
fixtures/: alt-tab.toml
hosts/darwin/: configuration.nix  default.nix  home.nix
hosts/linux/: configuration.nix  default.nix  hardware-configuration.nix  home.nix  packages.nix  programs.nix  services.nix  systemd.nix  users.nix
internal/chezmoi/: chezmoi.go  chezmoi_test.go  command.go  context.go  hyperwindow.go  nushell.go  raycast.go  shell.go  vscode.go  yazi.go  zed.go
internal/chromiumbrowser/: browser.go  config.go  config_test.go  cookie_autodelete.go  downloads.go  extensions.go  extensionstorage.go  files_test.go  host.go  install.go  linux.go  macos.go  preferences.go  profile.go  scripts.go  settings.go  wrapper.go
internal/helium/: files_test.go  installer.go  settings.go  settings_test.go
internal/httpfixture/: config.go  httpfixture_test.go  response.go  route.go  server.go  types.go
internal/immutableactivate/: activate.go  activate_test.go
internal/lenovo/: lenovo.go  lenovo_test.go
internal/lspfilter/: lspfilter.go  lspfilter_test.go
internal/systemrun/: command.go  mcp.go  process.go  systemrun_test.go
internal/zellijtheme/: config.go  execution.go  fs.go  home.go  manifest.go  patch.go  process.go  runners.toml  runtime_defaults.toml  session.go  theme.go  theme_defaults.toml  theme_terminal_unix.go  theme_terminal_windows.go  types.go  zellij.go  zellijtheme_test.go
lib/: ghostty.nix  kanata.nix  vscode.nix  zellij.nix
lib/zig/: build.zig
modules/common/: default.nix  fonts.nix  lib.nix  nix.nix  nixpkgs.nix  packages.nix
modules/cross/: default.nix  nixpkgs.nix  packages.nix
modules/darwin/: default.nix  fonts.nix  ghidra-mcp.nix  kanata.nix  launchd.nix  nixcord.nix  system.nix
modules/hm/: default.nix
modules/nixos/: default.nix  desktop-packages.nix  gnome.nix  hardware.nix  kanata.nix  kde.nix  niri.nix  nixcord.nix  packages.nix  services.nix  zed-remote.nix
pkgs/: bootstrap.nix  catppuccin-userstyles.nix  claude-statusline.nix  gh-hide-comment.nix  ghidra-mcp-headless.nix  http-fixture.nix  lenovo-con-mode.nix  lsp-diagnostic-filter.nix  packages.nix  tx-02-nerd-font.nix  yt-dlp-script.nix  yt-dlp.nix  ziglint.nix
scripts/: gh-hide-comment.nu  gh-hide-comment.ts  hide-comment.gql  render-equicord-settings.sh  yt-dlp-script.sh
secrets/: secrets.yaml
shared/: packages.nix
spectrum/: Containerfile  build.sh  packages.toml
(+515 files in other folders)
