[workspace]
members = [
    "crates/chezmoi",
    "crates/common",
    "packages/gh-hide-comment",
    "packages/system-run-mcp",
    "packages/http-fixture",
    "packages/lenovo-con-mode",
    "packages/lsp-diagnostic-filter",
    "packages/zellij-theme-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/euvlok/nix-dotfiles"

[workspace.dependencies]
camino = { version = "1.2.2", features = ["serde1"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete_command = { version = "0.6.1", features = ["nushell"] }
comfy-table = "7.2.2"
directories = "6.0.0"
flate2 = "1.1.9"
fs-err = "3.3.0"
indexmap = "2.12.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rmcp = { version = "1.7.0", default-features = false, features = ["macros", "server", "transport-io"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
shell-words = "1.1.1"
strum = { version = "0.28.0", features = ["derive"] }
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["io-std", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
minijinja = "2.20.0"
tiny_http = "0.12.0"
toml = "1.1.2"
toml_edit = "0.25.12"
url = "2.5.8"
walkdir = "2.5.0"
which = "8.0.2"
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
expect_used = "deny"
missing_safety_doc = "deny"
multiple_crate_versions = "allow"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
