[workspace]
members = [
    "crates/chezmoi",
    "crates/common",
    "packages/system-run-mcp",
    "packages/http-fixture",
    "packages/lenovo-con-mode",
    "packages/lsp-diagnostic-filter",
    "packages/zellij-theme-tools",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/euvlok/nix-dotfiles"

[workspace.dependencies]
clap = { version = "4.6.1", default-features = false, features = ["derive", "env", "std", "help", "usage", "error-context"] }
directories = "6.0.0"
duct = { version = "1.1.1", default-features = false }
flate2 = "1.1.9"
fs-err = "3.3.0"
indexmap = "2.12.1"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "rustls-no-provider"] }
rmcp = { version = "1.7.0", default-features = false, features = ["macros", "server", "transport-io"] }
rustls = { version = "0.23.40", default-features = false, features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tar = { version = "0.4.46", default-features = false }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["io-std", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
minijinja = { version = "2.20.0", default-features = false, features = ["builtins", "serde"] }
tiny_http = "0.12.0"
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde", "std"] }
toml_edit = "0.25.12"
walkdir = "2.5.0"
which = "8.0.2"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
expect_used = "deny"
missing_safety_doc = "deny"
multiple_crate_versions = "allow"
multiple_unsafe_ops_per_block = "deny"
panic = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unreachable = "deny"
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
