[package]
name = "chezmoi-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "chezmoi-support"
path = "src/main.rs"

[dependencies]
clap.workspace = true
directories.workspace = true
dotfiles-common = { version = "0.1.0", path = "../common" }
flate2.workspace = true
fs-err.workspace = true
miette = { version = "7.6.0", default-features = false, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[lints]
workspace = true
