[package]
name = "dotfiles-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duct = { workspace = true, features = ["timeout"] }
fs-err.workspace = true
fs-more = { version = "0.8.1", default-features = false }
minijinja.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
which.workspace = true

[lints]
workspace = true
