[package]
name = "dotfiles-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duct = "1.1.1"
fs-err.workspace = true
reqwest.workspace = true
rustls.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
walkdir.workspace = true
which.workspace = true

[lints]
workspace = true
